# GearForge

./: CMakeLists.txt  Makefile  README.md  build.ninja  build.sh  e -i HEAD~2  meson.build
docs/: developer_guide.md  testing_guide.md  user_guide.md
include/: gear_calculator.h  settings_manager.h  ui.h  user_manager.h  utils.h
src/: gear_calculator.cpp  main.cpp  settings_manager.cpp  ui.cpp  user_manager.cpp  utils.cpp
tests/: main_test.cpp  ui_test.cpp
